# omni

./: .gitattributes  .gitignore  .gitmodules  .golangci.yaml  .golangci.yml  .goreleaser-official.yaml  .goreleaser-snapshot.yaml  .goreleaser.yaml  .pre-commit-config.yaml  .secrets.baseline  .solhint.json  .solhintignore  AUTHORS  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  SECURITY.md  buf.gen.yaml  buf.yaml  go.mod  go.sum  version.go
.github/: CODEOWNERS  dependabot.yml  pull-request-template.md
.pre-commit/: foundry_utils.sh  run_buf.sh  run_forge_fmt.sh  run_forge_tests.sh  run_go_tests.sh  run_golint.sh  run_goversion.sh  run_regexp.sh  run_rust_checks.sh  run_sdk_checks.sh  run_solhint.sh
admin/: main.go
anchor/: .gitignore  Anchor.toml  Dockerfile  Makefile  anchorbuild.sh  build.sh  package.json
anchor/programs/solver-inbox/: Cargo.toml
anchor/programs/solver-inbox/src/: error.rs  event.rs  helpers.rs  lib.rs  types.rs
api/: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vercel.json
cli/: README.md  main.go
collector/: Dockerfile  main.go
contracts/: .env.example  .gas-snapshot  .gitignore  Makefile  README.md  doc.txt  foundry.toml  genbindings.go  gogen.go  package.json  pnpm-lock.yaml
docs/: .gitignore  README.md  branching.md  contributing.md  docusaurus.config.ts  package.json  pnpm-lock.yaml  release.md  sidebars.ts  vocs.config.mts  vocs.config.ts  vocs.config.tsx
e2e/: .gitignore  README.md  main.go  run-multiple.sh
explorer/: .gitignore  Makefile  README.md  (+1 more)
explorer-api/: Dockerfile  main.go
(+3670 files in other folders)
