[package]
name = "solver-inbox"
version = "0.0.1"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solver_inbox"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]



[dependencies]
anchor-lang = "0.31.0"
anchor-spl = "0.31.1"
ethabi-solana = "1.0.0"
hex = "0.4.3"
sha2 = "0.10.9"
uint = "0.10.0"
